r7193/sofa-dev : presentation LJK ce matin

--- a/principles/principes.tex
+++ b/principles/principes.tex
@@ -594,7 +594,7 @@ Use extended trees (Directed Acyclic Graphs) to model trees with loops.
  \frametitle{Efficient implicit integration}
 \begin{itemize}
  \item Large time steps for stiff internal forces and interactions
- \item solve $ (\alpha M + \beta h^2 K ) \Delta v = h( f + hKv) $ Iteratively using a cojugate gradient solution
+ \item solve $ (\alpha M + \beta h^2 K ) \Delta v = h( f + hKv) $ Iteratively using a conjugate gradient solution
 \end{itemize}
  Actions:
 \begin{itemize}
@@ -626,7 +626,7 @@ Ongoing work: building global vectors and matrices also
  \item Displacements are propagated top-down
  \item Interactions forces are evaluated after displacement propagation
  \item Forces are accumulated bottom-up
- \item Branches can be processed in parallel
+% \item Branches can be processed in parallel
  \item virtual functions applied to components
 \end{itemize}
 
@@ -635,38 +635,105 @@ Ongoing work: building global vectors and matrices also
 \end{frame}
 
 
+
+%%%===================================================================
+\section{Collision detection and response}
+%%%===================================================================
+\begin{frame}
+ \frametitle{Collision detection and response}
+CollisionPipeline component orchestrates specific components
+\begin{itemize}
+ \item BroadPhase: bounding volume intersections
+ \item NarrowPhase: geometric primitive intersections
+ \item Reaction: what to do when collisions occur
+ \item GroupManager: putting colliding objects under a common solver
+\end{itemize}
+Recent work uses the GPU
+\end{frame}
+
+
+%%%===================================================================
+\section{Parallelism}
+%%%===================================================================
+\begin{frame}
+ \frametitle{Parallelism in time integration}
+Two levels of parallelism:
+\begin{itemize}
+ \item Low level: GPU implementations of components 
+ \item High level: task-based using data dependencies
+\end{itemize}
+
+We can combine them !
+\end{frame}
+
+%---------------------------------------------------------------
+\begin{frame}
+ \frametitle{GPU Parallelism}
+\begin{itemize}
+ \item StiffSpringForceField, TetrahedronFEMForceField, HexahedronFEMForceField are implemented on the GPU
+ \item The DOF component makes data transfer transparent
+ \item CPU and GPU components can be used simultaneously
+ \item Nice speedups
+\begin{center}
+\includegraphics[width=0.8\linewidth]{gpuForceFields.png}
+\end{center}
+\end{itemize}
+\end{frame}
+
+%---------------------------------------------------------------
+\begin{frame}
+ \frametitle{High-level Parallelism}
+Everton Hermann's Ph.D. thesis (2007-2010):
+\begin{itemize}
+ \item<1-> analyses solver operations
+ \item<2-> exploits scene graph branches
+ \item<3-> removes spurious synchronizations using data dependency analysis [Athapascan]
+ \item<3-> efficiency ranges for 50\% to 90\%
+\end{itemize}
+\begin{center}
+\only<1>{\includegraphics[height=0.4\linewidth]{interactionSequential.png}}
+\only<2>{\includegraphics[height=0.4\linewidth]{interactionParallel1.png}}
+\only<3>{\includegraphics[height=0.4\linewidth]{interactionParallel2.png}}
+\only<4>{\includegraphics[height=0.4\linewidth]{interactionParallel3.png}}
+\end{center}
+\end{frame}
+
+%---------------------------------------------------------------
+\begin{frame}
+ \frametitle{Hybrid Parallelism}
+Work in progress
+\begin{itemize}
+ \item Use high level and low level simultaneously 
+ \item Dynamically balance between multiple CPUs and GPUs 
+\end{itemize}
+\begin{center}
+\includegraphics[height=0.4\linewidth]{MultiGPUCPUResults.png}
+\end{center}
+\end{frame}
+
+
 %%%===================================================================
 \section{Conclusion}
 %%%===================================================================
 
-\begin{frame}
- \frametitle{Current stage}
-About 60 man.month, 20000 C++ code lines
-\begin{center}
- \includegraphics[width=\linewidth]{snapshotSofa1.png}
-\end{center}
-
-\end{frame}
-
 
 \begin{frame}
- \frametitle{Efficient coupling}
+ \frametitle{Conclusion - Features}
 High modularity:
 \begin{itemize}
  \item Abstract components: DOF, Force, Constraint, Solver, Topology, Mass, CollisionModel, VisualModel, etc. 
- \item Arbitrary DOF types can coexist in the same scene
+ \item Multimodel simulations using mappings
+ \item Explicit and implicit solvers, Lagrange multipliers
 \end{itemize}
 Efficiency:
 \begin{itemize}
  \item global vectors and matrices are avoided
- \item parallel processing is allowed
+ \item parallel implementations
 \end{itemize}
 Implementation:
 \begin{itemize}
- \item currently 20000 C++ lines
- \item Windows, Linux
- \item Qt or FLTK user interfaces
- \item XML file format
+ \item currently $450,000$ C++ lines
+ \item Linux, MacOs, Windows
 \end{itemize}
 
 \end{frame}
@@ -677,14 +744,16 @@ Implementation:
 \begin{frame}
 \frametitle{Ongoing work}
 \begin{itemize}
-\item More people: ETHZ, ...
-\item More algorithms: cutting \begin{small}\textit{(Herv\'e Delingette, ASCLEPIOS)}\end{small}, interfaces \begin{small}\textit{(Fran\c{c}ois Faure, EVASION)}\end{small},... 
-\item More schedulers: asynchronous simulation/rendering/haptic feedback \begin{small}\textit{(Jeremie Allard, Cimit)}\end{small}
-\item More brute force: parallelization on PC cluster \begin{small}\em (Everton Hermann, LIG/LJK)\end{small}
-\item More visual performance: coupling to a good render engine \begin{small}\textit{ (Pierre-Jean Bensoussan, ALCOVE)}\end{small}
-\item More documentation \begin{small}\textit{(everybody...)}\end{small}
-\item Licensing
+\item models and algorithms: better numerical solvers, cutting, haptics, Eulerian fluids...
+\item asynchronous simulation/rendering/haptic feedback 
+\item multiphysics (electrical/mechanical)
+\item parallelism for everyone
+\item more documentation (release 1.0 this year ?)
 \end{itemize}
+% \end{frame}
+% 
+% \begin{frame}
+% \frametitle{Applications}
 
 \vspace{1cm}
 \begin{center}
