--- a/articulatedBodies/softArticulations.tex
+++ b/articulatedBodies/softArticulations.tex
@@ -68,7 +68,8 @@ The example softArticulations.scn shows a basic pendulum :
 
 \begin{verbatim}
 <Node>
-  <Object type="BruteForceDetection"/>
+  <Object type="BruteForceBroadPhase"/>
+  <Object type="BVHNarrowPhase"/>
   <Object type="DefaultContactManager"/>
   <Object type="DefaultPipeline"/>
   <Object type="ProximityIntersection"/>
