--- a/modules/articulatedbodies/softArticulations.tex
+++ b/modules/articulatedbodies/softArticulations.tex
@@ -68,7 +68,8 @@ The example \texttt{../examples/Components/forcefield/JointSpringForceField.scn}
 
 \begin{verbatim}
 <Node>
-  <Object type="BruteForceDetection"/>
+  <Object type="BruteForceBroadPhase"/>
+  <Object type="BVHNarrowPhase"/>
   <Object type="DefaultContactManager"/>
   <Object type="DefaultPipeline"/>
   <Object type="ProximityIntersection"/>
